SERVER-46120 Make ReplSetMetadata non-optional