src/mongo/db/repl/oplog_fetcher_test.cpp
@@ -768,7 +768,7 @@ TEST_F(
 
     CursorId cursorId = 22LL;
     auto firstEntry = makeNoopOplogEntry(lastFetched);
-    auto metadataObj = makeOplogBatchMetadata(boost::none, oqMetadata);
+    auto metadataObj = makeOplogBatchMetadata(replSetMetadata, oqMetadata);
 
     auto conn = oplogFetcher->getDBClientConnection_forTest();
 
@@ -827,6 +827,14 @@ TEST_F(OplogFetcherTest, ValidMetadataInResponseWithoutOplogMetadataStopsTheOplo
     CursorId cursorId = 22LL;
     auto entry = makeNoopOplogEntry(lastFetched);
     auto metadataObj = makeOplogBatchMetadata(replSetMetadata, boost::none);
+    ASSERT_EQUALS(ErrorCodes::NoSuchKey,
+                  processSingleBatch(makeFirstBatch(cursorId, {entry}, metadataObj))->getStatus());
+}
+
+TEST_F(OplogFetcherTest, ResponseWithoutReplicaSetMetadataStopsTheOplogFetcher) {
+    CursorId cursorId = 22LL;
+    auto entry = makeNoopOplogEntry(lastFetched);
+    auto metadataObj = makeOplogBatchMetadata(boost::none, oqMetadata);
     ASSERT_EQUALS(ErrorCodes::NoSuchKey,
                   processSingleBatch(makeFirstBatch(cursorId, {entry}, metadataObj))->getStatus());
 }
@@ -997,7 +1005,7 @@ TEST_F(OplogFetcherTest, DontRecreateNewCursorAfterFailedBatchNoRetries) {
     CursorId cursorId = 22LL;
     auto firstEntry = makeNoopOplogEntry(lastFetched);
     auto secondEntry = makeNoopOplogEntry({{Seconds(456), 0}, lastFetched.getTerm()});
-    auto metadataObj = makeOplogBatchMetadata(boost::none, oqMetadata);
+    auto metadataObj = makeOplogBatchMetadata(replSetMetadata, oqMetadata);
     auto firstBatch = {firstEntry, secondEntry};
 
     // Update lastFetched before it is updated by getting the next batch.
@@ -1035,7 +1043,7 @@ TEST_F(OplogFetcherTest, FailCreateNewCursorAfterFailedBatchRetriesShutsDownOplo
     CursorId cursorId = 22LL;
     auto firstEntry = makeNoopOplogEntry(lastFetched);
     auto secondEntry = makeNoopOplogEntry({{Seconds(456), 0}, lastFetched.getTerm()});
-    auto metadataObj = makeOplogBatchMetadata(boost::none, oqMetadata);
+    auto metadataObj = makeOplogBatchMetadata(replSetMetadata, oqMetadata);
     auto firstBatch = {firstEntry, secondEntry};
 
     // Update lastFetched before it is updated by getting the next batch.
@@ -1105,7 +1113,7 @@ TEST_F(OplogFetcherTest, SuccessfullyRecreateCursorAfterFailedBatch) {
     CursorId cursorId = 22LL;
     auto firstEntry = makeNoopOplogEntry(lastFetched);
     auto secondEntry = makeNoopOplogEntry({{Seconds(124), 0}, lastFetched.getTerm()});
-    auto metadataObj = makeOplogBatchMetadata(boost::none, oqMetadata);
+    auto metadataObj = makeOplogBatchMetadata(replSetMetadata, oqMetadata);
     auto firstBatch = {firstEntry, secondEntry};
 
     // Update lastFetched before it is updated by getting the next batch.
@@ -1249,7 +1257,7 @@ TEST_F(OplogFetcherTest, SuccessfulBatchResetsNumRestarts) {
     CursorId cursorId = 22LL;
     auto firstEntry = makeNoopOplogEntry(lastFetched);
     auto secondEntry = makeNoopOplogEntry({{Seconds(456), 0}, lastFetched.getTerm()});
-    auto metadataObj = makeOplogBatchMetadata(boost::none, oqMetadata);
+    auto metadataObj = makeOplogBatchMetadata(replSetMetadata, oqMetadata);
     auto firstBatch = {firstEntry, secondEntry};
 
     // Update lastFetched before it is updated by getting the next batch.
@@ -1322,7 +1330,7 @@ TEST_F(OplogFetcherTest, OplogFetcherWorksWithoutExhaust) {
     CursorId cursorId = 22LL;
     auto firstEntry = makeNoopOplogEntry(lastFetched);
     auto secondEntry = makeNoopOplogEntry({{Seconds(456), 0}, lastFetched.getTerm()});
-    auto metadataObj = makeOplogBatchMetadata(boost::none, oqMetadata);
+    auto metadataObj = makeOplogBatchMetadata(replSetMetadata, oqMetadata);
     auto firstBatch = {firstEntry, secondEntry};
 
     // Update lastFetched before it is updated by getting the next batch.
@@ -1401,7 +1409,7 @@ TEST_F(OplogFetcherTest, CursorIsDeadShutsDownOplogFetcherWithSuccessfulStatus) 
     CursorId cursorId = 0LL;
     auto firstEntry = makeNoopOplogEntry(lastFetched);
     auto secondEntry = makeNoopOplogEntry({{Seconds(124), 0}, lastFetched.getTerm()});
-    auto metadataObj = makeOplogBatchMetadata(boost::none, oqMetadata);
+    auto metadataObj = makeOplogBatchMetadata(replSetMetadata, oqMetadata);
     auto firstBatch = {firstEntry, secondEntry};
 
     // Creating the cursor will succeed, but the oplog fetcher will shut down after receiving this
@@ -1433,7 +1441,7 @@ TEST_F(OplogFetcherTest, EmptyFirstBatchStopsOplogFetcherWithOplogStartMissingEr
 
 TEST_F(OplogFetcherTest, MissingOpTimeInFirstDocumentCausesOplogFetcherToStopWithInvalidBSONError) {
     CursorId cursorId = 22LL;
-    auto metadataObj = makeOplogBatchMetadata(boost::none, oqMetadata);
+    auto metadataObj = makeOplogBatchMetadata(replSetMetadata, oqMetadata);
     ASSERT_EQUALS(
         ErrorCodes::InvalidBSON,
         processSingleBatch(makeFirstBatch(cursorId, {BSONObj()}, metadataObj))->getStatus());
@@ -1444,7 +1452,7 @@ TEST_F(
     LastOpTimeFetchedDoesNotMatchFirstDocumentCausesOplogFetcherToStopWithOplogStartMissingError) {
     CursorId cursorId = 22LL;
     auto entry = makeNoopOplogEntry({{Seconds(456), 0}, lastFetched.getTerm()});
-    auto metadataObj = makeOplogBatchMetadata(boost::none, oqMetadata);
+    auto metadataObj = makeOplogBatchMetadata(replSetMetadata, oqMetadata);
     ASSERT_EQUALS(ErrorCodes::OplogStartMissing,
                   processSingleBatch(makeFirstBatch(cursorId, {entry}, metadataObj))->getStatus());
 }
@@ -1453,7 +1461,7 @@ TEST_F(OplogFetcherTest,
        MissingOpTimeInSecondDocumentOfFirstBatchCausesOplogFetcherToStopWithNoSuchKey) {
     CursorId cursorId = 22LL;
     auto firstEntry = makeNoopOplogEntry(lastFetched);
-    auto metadataObj = makeOplogBatchMetadata(boost::none, oqMetadata);
+    auto metadataObj = makeOplogBatchMetadata(replSetMetadata, oqMetadata);
     ASSERT_EQUALS(
         ErrorCodes::NoSuchKey,
         processSingleBatch(makeFirstBatch(cursorId,
@@ -1466,7 +1474,7 @@ TEST_F(OplogFetcherTest,
 
 TEST_F(OplogFetcherTest, TimestampsNotAdvancingInBatchCausesOplogFetcherStopWithOplogOutOfOrder) {
     CursorId cursorId = 22LL;
-    auto metadataObj = makeOplogBatchMetadata(boost::none, oqMetadata);
+    auto metadataObj = makeOplogBatchMetadata(replSetMetadata, oqMetadata);
     ASSERT_EQUALS(ErrorCodes::OplogOutOfOrder,
                   processSingleBatch(makeFirstBatch(cursorId,
                                                     {makeNoopOplogEntry(lastFetched),
@@ -1482,7 +1490,7 @@ TEST_F(OplogFetcherTest, OplogFetcherShouldExcludeFirstDocumentInFirstBatchWhenE
     auto firstEntry = makeNoopOplogEntry(lastFetched);
     auto secondEntry = makeNoopOplogEntry({{Seconds(456), 0}, lastFetched.getTerm()});
     auto thirdEntry = makeNoopOplogEntry({{Seconds(789), 0}, lastFetched.getTerm()});
-    auto metadataObj = makeOplogBatchMetadata(boost::none, oqMetadata);
+    auto metadataObj = makeOplogBatchMetadata(replSetMetadata, oqMetadata);
 
     auto shutdownState = processSingleBatch(
         makeFirstBatch(cursorId, {firstEntry, secondEntry, thirdEntry}, metadataObj),
@@ -1543,7 +1551,7 @@ TEST_F(OplogFetcherTest,
     CursorId cursorId = 22LL;
     auto firstEntry = makeNoopOplogEntry({{Seconds(123), 0}, lastFetched.getTerm()});
     auto secondEntry = makeNoopOplogEntry({{Seconds(456), 0}, lastFetched.getTerm()});
-    auto metadataObj = makeOplogBatchMetadata(boost::none, oqMetadata);
+    auto metadataObj = makeOplogBatchMetadata(replSetMetadata, oqMetadata);
 
     // Update lastFetched before it is updated by getting the next batch.
     lastFetched = oplogFetcher->getLastOpTimeFetched_forTest();
@@ -1618,7 +1626,7 @@ TEST_F(OplogFetcherTest,
     auto firstEntry = makeNoopOplogEntry({{Seconds(123), 0}, lastFetched.getTerm()});
     auto secondEntry = makeNoopOplogEntry({{Seconds(456), 0}, lastFetched.getTerm()});
     auto thirdEntry = makeNoopOplogEntry({{Seconds(789), 0}, lastFetched.getTerm()});
-    auto metadataObj = makeOplogBatchMetadata(boost::none, oqMetadata);
+    auto metadataObj = makeOplogBatchMetadata(replSetMetadata, oqMetadata);
 
     // Update lastFetched before it is updated by getting the next batch.
     lastFetched = oplogFetcher->getLastOpTimeFetched_forTest();
@@ -1661,7 +1669,7 @@ TEST_F(OplogFetcherTest, OplogFetcherShouldReportErrorsThrownFromEnqueueDocument
     CursorId cursorId = 22LL;
     auto firstEntry = makeNoopOplogEntry(lastFetched);
     auto secondEntry = makeNoopOplogEntry({{Seconds(456), 0}, lastFetched.getTerm()});
-    auto metadataObj = makeOplogBatchMetadata(boost::none, oqMetadata);
+    auto metadataObj = makeOplogBatchMetadata(replSetMetadata, oqMetadata);
 
     enqueueDocumentsFn = [](OplogFetcher::Documents::const_iterator,
                             OplogFetcher::Documents::const_iterator,
@@ -1948,7 +1956,7 @@ TEST_F(OplogFetcherTest, OplogFetcherResetsNumRestartsOnSuccessfulConnection) {
 
     CursorId cursorId = 0LL;
     auto firstEntry = makeNoopOplogEntry(lastFetched);
-    auto metadataObj = makeOplogBatchMetadata(boost::none, oqMetadata);
+    auto metadataObj = makeOplogBatchMetadata(replSetMetadata, oqMetadata);
 
     // Allow the cursor re-initialization to succeed. But the OplogFetcher will shut down with an OK
     // status after receiving this batch because the cursor id is 0.
@@ -1973,7 +1981,7 @@ TEST_F(OplogFetcherTest, OplogFetcherCanAutoReconnect) {
 
     auto firstEntry = makeNoopOplogEntry(lastFetched);
     auto secondEntry = makeNoopOplogEntry({{Seconds(124), 0}, lastFetched.getTerm()});
-    auto metadataObj = makeOplogBatchMetadata(boost::none, oqMetadata);
+    auto metadataObj = makeOplogBatchMetadata(replSetMetadata, oqMetadata);
 
     // Simulate closing the cursor and the OplogFetcher should exit with an OK status.
     processSingleRequestResponse(conn, makeFirstBatch(0LL, {firstEntry}, metadataObj));
@@ -2023,7 +2031,7 @@ TEST_F(OplogFetcherTest, DisconnectsOnErrorsDuringExhaustStream) {
     CursorId cursorId = 22LL;
     auto firstEntry = makeNoopOplogEntry(lastFetched);
     auto secondEntry = makeNoopOplogEntry({{Seconds(124), 0}, lastFetched.getTerm()});
-    auto metadataObj = makeOplogBatchMetadata(boost::none, oqMetadata);
+    auto metadataObj = makeOplogBatchMetadata(replSetMetadata, oqMetadata);
 
     auto conn = oplogFetcher->getDBClientConnection_forTest();
     // First batch for the initial find command.
@@ -2069,7 +2077,7 @@ TEST_F(OplogFetcherTest, GetMoreEmptyBatch) {
 
     CursorId cursorId = 22LL;
     auto firstEntry = makeNoopOplogEntry(lastFetched);
-    auto metadataObj = makeOplogBatchMetadata(boost::none, oqMetadata);
+    auto metadataObj = makeOplogBatchMetadata(replSetMetadata, oqMetadata);
 
     auto conn = oplogFetcher->getDBClientConnection_forTest();
 
@@ -2101,6 +2109,7 @@ TEST_F(OplogFetcherTest, HandleLogicalTimeMetaDataAndAdvanceClusterTime) {
         rpc::LogicalTimeMetadata(SignedLogicalTime(logicalTime, TimeProofService::TimeProof(), 0));
 
     BSONObjBuilder bob;
+    ASSERT_OK(replSetMetadata.writeToMetadata(&bob));
     ASSERT_OK(oqMetadata.writeToMetadata(&bob));
     logicalTimeMetadata.writeToMetadata(&bob);
     auto metadataObj = bob.obj();
